# internal/handlers/areas.go
@@ -8,10 +8,16 @@ import (
 	"net/http"
 
 	"github.com/tomy-git/jma-openapi/internal/gen"
+	"github.com/tomy-git/jma-openapi/internal/mappers"
 )
 
 func (s *Server) GetV1Areas(w http.ResponseWriter, r *http.Request, params gen.GetV1AreasParams) {
-	response, err := s.areaUsecase.List(r.Context(), params.Parent)
+	response, err := s.areaUsecase.List(r.Context(), mappers.AreaFilter{
+		Parent:     params.Parent,
+		Name:       params.Name,
+		OfficeName: params.OfficeName,
+		Child:      params.Child,
+	})
 	if err != nil {
 		writeHandlerError(w, r, err)
 		return
